Product and Tray DAO and database fix

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.7.4</version>
+      </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
       <artifactId>grpc-netty</artifactId>
